static/css/markdown.css
h1, h2, h3, h4, h5, h6 {
    line-height: 36px;
}
h1 {
    margin-bottom: 18px;
    font-size: 30px;
}
h2 {
    font-size: 24px;
}
h3 {
    font-size: 18px;
}
h4 {
    font-size: 16px;
}
h5 {
    font-size: 14px;
}
h6 {
    font-size: 13px;
}

p {
    font-family: 'Roboto', sans-serif;
    text-align: justify;
    margin-bottom: 9px;
}

ul {
    margin: 0.5em 0;
    padding: 0 0 0 1.5em;
}

ol {
    margin: 0.5em;
    padding: 0 0 0 1.7em;
}

a {
    font-family: 'Roboto', sans-serif;
    color: #0069d6;
}

a:hover {
    color: #0050a3;
    text-decoration: none;
}

blockquote {
    color:#3f3f3f;
    margin:0;
    padding-left: 1em;
    border-left: 0.5em #EEE solid;
}

code {
    background-color: #dddddd;
    color: rgba(0, 0, 0, 0.75);
    padding: 1px 3px;
    font-size: 14px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

pre {
    display: block;
    padding: 14px;
    margin: 0 0 18px;
    line-height: 16px;
    font-size: 12px;
    border: 1px solid #d9d9d9;
    white-space: pre-wrap;
    word-wrap: break-word;
}

pre code {
    background-color: #fff;
    font-size: 14px;
    padding: 0;
}

img.half-crop {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 5px;
    width: 50%;
}

@media only screen and (hover: none) and (pointer: coarse) {
    img {
        margin: 0px 15px 5px 15px;
        display: block;
        width: 90%;
    }
    img.half-crop {
        margin: 0px 15px 5px 15px;
        display: block;
        width: 90%;
    }
}

